--- a/wizard.html
+++ b/wizard.html
@@ -2,16 +2,30 @@
 <html>
  <style>
 body {
-  background-image: url('Backgrounds/Dragonstorm.jpg');
+  background-image: url('Dragonstorm.jpg');
 }
 </style> 
 <head>
-	<title>Christian Gibbs Personal Website Page2</title>
+	<title>Personal Website Page2</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div class="p1">
+	<h1>Wizard's Chronicle</h1>
+	<b class="smallMargins">wizardy - status:</b>
+	<p class="smallMargins">mmmmmm</p>
+	<table>
+		<tr>
+			<th><a href="index.html">home</a></th>
+			<th><a href="media.html">media</a></th>
+			<th><a href="creations.html">creations</a></th>
+			<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
+			<th><a href="aesthetic_ideas.html">Aesthetic Ideas</a></th>
+			<th><a href="blog.html">blog</a></th>
+			<th><a href="wizard.html">wizardry</a></th>
+		</tr>
+	</table>
+</div>
 
 </body>
 </html> 
