--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
 <html>
-<style>
-.container {
-	display:flex;
-}
-.container > div1{
-	width:65%;
-}
-.container > div2{
-	width:45%;
-}
-</style>
 <head>
 	<title>The Wizard's Personal Website</title>
 	<link rel="stylesheet" href="styles.css">
@@ -18,14 +7,13 @@
 
 <body>
 	<div class="container">
-
-		
 		<div1 class="mainPage">
 			<h1>Wizard Home - Welcome to ponderlands</h1>
-			<p>website directory:</p>
+			<b class="smallMargins">home - status:</b>
+			<p class="smallMargins">mmmmmm</p>
 			<table>
 				<tr>
-					<th><a href="home.html">home</a></th>
+					<th><a href="index.html">home</a></th>
 					<th><a href="media.html">media</a></th>
 					<th><a href="creations.html">creations</a></th>
 					<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
@@ -36,8 +24,6 @@
 			</table>
 
 			<p>Some wisdom</p>
-            -Generalize
-
 
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
 			Gifs found at <a href="https://gifcities.org/">gifcities</a>
@@ -46,6 +32,7 @@
 			========================================================================================================
 			<br>
 			<img src="Gifs/oceanbkgwithwhitemoon.gif">
+			<img src="misato.jpeg" style="width:500px;"><br>
 
 
 		</div1>
@@ -54,8 +41,8 @@
 			<br>
 			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 
-			<img src="Gifs/psychedelic.gif" style="width:150px;"><br>
 			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
+
 
 		</div2>
 	</div>
