--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -1,13 +1,24 @@
  <!DOCTYPE html>
 <html>
 <head>
-	<title>Christian Gibbs Personal Website Page2</title>
+	<title>Personal Website Page2</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>Wizard's Philosophical Ponderings</h1>
+	<b class="smallMargins">philosophy - status:</b>
+	<p class="smallMargins">mmmmmm</p>
+	<table>
+		<tr>
+			<th><a href="index.html">home</a></th>
+			<th><a href="media.html">media</a></th>
+			<th><a href="creations.html">creations</a></th>
+			<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
+			<th><a href="aesthetic_ideas.html">Aesthetic Ideas</a></th>
+			<th><a href="blog.html">blog</a></th>
+			<th><a href="wizard.html">wizardry</a></th>
+		</tr>
+	</table>
 </body>
 </html> 
