Added astronomy page + philosophy topics

--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title> Personal Website Page2</title>
@@ -23,6 +23,13 @@
 	</table>
 </div>
 
+<h2>2024-05-28</h2>
+Hermes Trismegistus
+
+<h2>Domains to study towards polymath understanding of things</h2>
+Astronomy - Understanding the simple, classically understood information. Goals: Major constellations, direction/navigation & season
+tracing the history of astronomy
+History: Babylon - Why is it so important, what are its main exports (Gilgamesh, maths & sciences)
 
 </body>
 </html> 
