--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
 
+			<h3>adasd</h3>
+			<b><a href="astronomy.html">\Astronomy/</a></b>
+
 
 		</div2>
 	</div>
