--- a/astronomy.html
+++ b/astronomy.html
@@ -60,16 +60,34 @@ Hand trick = Approximately <br>
 
 <b><a href="https://youtu.be/TQNH_0lMqF0">Types of constellations</a></b> <br>
 1. Circumpolar Constellations - Constellations that never disappear below horizon and can be seen all year round <br>
-&emsp; Ursa Major <br>
-&emsp; Ursa Minor - Handle Star = Polaris <br>
-&emsp; Draco the Dragon - Sandwiched between ursas major & minor <br>
-&emsp; Cassiopea - W/M shape <br>
-&emsp; Cepheus - The King <br>
+&emsp; <a href="Assets/Astronomy/ursa-major.jpg">Ursa Major</a> <br> 
+&emsp; <a href="Assets/Astronomy/Ursa Minor.jpg">Ursa Minor - Handle Star = Polaris </a> <br>
+&emsp; <a href="Assets/Astronomy/Draco.jpg">Draco the Dragon</a> <br>
+&emsp; <a href="Assets/Astronomy/Cassiopeia.jpg">Cassiopea - W/M shape</a> <br>
+&emsp; <a href="Assets/Astronomy/Cepheus.jpg">Cepheus - The King</a> <br>
  
 2. Zodiacal Constellations - Constellations in which the sun passes through <br>
-&emsp; The 12 Zodiacs -  Aries, Taurus, Gemini, Cancer, Leo, Virgo, Libra, Scorpio, Sagittarius, Capricorn, Aquarius, and Pisces. <br>
+&emsp; The 12 Zodiacs -  
+<a href="Assets/Astronomy/Aries.jpg">Aries</a>
+<a href="Assets/Astronomy/Taurus.jpg">Taurus</a>
+<a href="Assets/Astronomy/Gemini.jpg">Gemini</a>
+<a href="Assets/Astronomy/Cancer.jpg">Cancer</a>
+<a href="Assets/Astronomy/Leo.jpg">Leo</a>
+<a href="Assets/Astronomy/Virgo.jpg">Virgo</a>
+<a href="Assets/Astronomy/Libra.jpg">Libra</a>
+<a href="Assets/Astronomy/Scorpio.jpg">Scorpio</a>
+<a href="Assets/Astronomy/Sagittarius.jpg">Sagittarius</a>
+<a href="Assets/Astronomy/Capricorn.jpg">Capricorn</a>
+<a href="Assets/Astronomy/Aquarius.jpg">Aquarius</a>
+<a href="Assets/Astronomy/Pisces.jpg">Pisces</a> <br>
 
 3. Seasonal Constellations - Constellations that appear during particular seasons <br>
+
+
+<h2>Navigating using stars</h2>
+1. Following the north star for north
+2. Follow Orion's belt trick for south
+
 
 </body>
 </html> 
