--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ Hermes Trismegistus
 
 <h2>Domains to study towards polymath understanding of things</h2>
 Astronomy - Understanding the simple, classically understood information. Goals: Major constellations, direction/navigation & season
-tracing the history of astronomy
+tracing the history of astronomy <br>
 History: Babylon - Why is it so important, what are its main exports (Gilgamesh, maths & sciences)
 
 </body>
