--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			========================================================================================================
 			<br>
 			<img src="Gifs/oceanbkgwithwhitemoon.gif">
-			<img src="misato.jpeg" style="width:400px;"><br>
+			<img src="Assets/misato.jpeg" style="width:400px;"><br>
 
 
 		</div1>
@@ -43,7 +43,7 @@
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
 
-			<h3>adasd</h3>
+			<h3>Sidebar - Links</h3>
 			<b><a href="astronomy.html">\Astronomy/</a></b>
 
 
