--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -37,6 +37,7 @@
 	<h2>Plants and green are good</h2>
 	<h2>Mythology and Shin Megami Tensei</h2>
 	<h2>Traditional Chinese Medecine</h2>
+	<h2>Psychedelics - Decriminalize psilocybin mushrooms</h2>
 	<h2>Eating Well</h2>
 	<h2>Moving Well</h2>
 
