--- a/aesthetic_ideas.html
+++ b/aesthetic_ideas.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>Wizard's Chronicle</h1>
+<div>
+<h1>Wizard's Aesthetic</h1>
 	<b class="smallMargins">aesthetic - status:</b>
 	<p class="smallMargins">mmmmmm</p>
 	<table>
@@ -20,6 +20,9 @@
 			<th><a href="wizard.html">wizardry</a></th>
 		</tr>
 	</table>
+</div>
+
+
 
 </body>
 </html> 
