--- a/astronomy.html
+++ b/astronomy.html
@@ -23,6 +23,7 @@
 	</table>
 </div>
 
+<div>
 <h2>2024-05-28 Notes</h2>
 <a href="https://skymaps.com">Skymaps</a>
 <br> <br>
@@ -87,7 +88,7 @@ Hand trick = Approximately <br>
 <h2>Navigating using stars</h2>
 1. Following the north star for north
 2. Follow Orion's belt trick for south
-
+</div>
 
 </body>
 </html> 
