--- a/blog.html
+++ b/blog.html
@@ -23,13 +23,18 @@
 	</table>
 </div>
 
-<h2>2024-05-28</h2>
-Hermes Trismegistus
+<div>
+<h2>Wizard's Chronicle</h2>
+
+<b>2024-05-28</b> <br>
+>Hermes Trismegistus and the Hermetica <br>
 
 <h2>Domains to study towards polymath understanding of things</h2>
 Astronomy - Understanding the simple, classically understood information. Goals: Major constellations, direction/navigation & season
 tracing the history of astronomy <br>
 History: Babylon - Why is it so important, what are its main exports (Gilgamesh, maths & sciences)
+
+</div>
 
 </body>
 </html> 
