--- a/creations.html
+++ b/creations.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+	
+<div>
 <h1>Wizard's Chronicle</h1>
 	<b class="smallMargins">creations - status:</b>
 	<p class="smallMargins">mmmmmm</p>
@@ -20,6 +21,7 @@
 			<th><a href="wizard.html">wizardry</a></th>
 		</tr>
 	</table>
+</div>
 
 </body>
 </html> 
