--- a/wizard.html
+++ b/wizard.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 body {
-  background-image: url('Dragonstorm.jpg');
+  background-image: url('Assets/Dragonstorm.jpg');
 }
 </style> 
 <head>
