--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 				</tr>
 			</table>
 
-			<p>Some wisdom</p>
+			<h2>about:</h2>
+			welcome to kodama.top, Christian's home on the internet (not my words)
+			<br>
+			landing page for all my interests/investigations, check them out if you feel like it
+			<br>
 
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
 			Gifs found at <a href="https://gifcities.org/">gifcities</a>
@@ -32,21 +36,18 @@
 			========================================================================================================
 			<br>
 			<img src="Gifs/oceanbkgwithwhitemoon.gif">
-			<img src="Assets/misato.jpeg" style="width:400px;"><br>
+			<!-- <img src="Assets/misato.jpeg" style="width:400px;"><br> -->
+			
 
 
 		</div1>
 		<div2 class="sidebarRight" style="text-align:center">
-			<p>Yooooooo Sidebar and shit</p>
 			<br>
-			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+			<h2>Sidebar - Links</h2>
+			<b><a href="astronomy.html">\Astronomy/</a></b>  <br>
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
-
-			<h3>Sidebar - Links</h3>
-			<b><a href="astronomy.html">\Astronomy/</a></b>
-
-
+			<hr>
 		</div2>
 	</div>
 		
