--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -22,6 +22,8 @@
 		</tr>
 	</table>
 </div>
+
+<div>
 	<h2>Nagarjuna and the preceding authors required to appreciate his works</h2>
 	<h2>Buddhism</h2>
 	<h2>Taoism</h2>
@@ -41,8 +43,7 @@
 	<h2>Eating Well</h2>
 	<h2>Moving Well</h2>
 
-
-<div>
+</div>
 
 
 </body>
