esotericism & mythology added

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 			<br>
 
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
-			Gifs found at <a href="https://gifcities.org/">gifcities</a>
+			<br>
+			Gifs found at <a href="https://gifcities.org/">gifcities</a> <br>
+			site background is a screenshot from <a href="https://abzugame.com/">Abzu</a>
 
 			<br><br>
-			========================================================================================================
+			
 			<br>
 			<img src="Gifs/oceanbkgwithwhitemoon.gif">
 			<!-- <img src="Assets/misato.jpeg" style="width:400px;"><br> -->
@@ -45,9 +47,11 @@
 			<br>
 			<h2>Sidebar - Links</h2>
 			<b><a href="astronomy.html">\Astronomy/</a></b>  <br>
+			<b><a href="mythology.html">\Mythology/</a></b>  <br>
+			<b><a href="esotericism.html">\Esotericism/</a></b>  <br>
 
 			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
-			<hr>
+			
 		</div2>
 	</div>
 		
