--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -9,7 +9,7 @@
 <div>
 <h1>Wizard's Philosophical Ponderings</h1>
 	<b class="smallMargins">philosophy - status:</b>
-	<p class="smallMargins">mmmmmm</p>
+	<p class="smallMargins">glad this is full</p>
 	<table>
 		<tr>
 			<th><a href="index.html">home</a></th>
@@ -24,24 +24,37 @@
 </div>
 
 <div>
-	<h2>Nagarjuna and the preceding authors required to appreciate his works</h2>
+	<h2>planning to add hyperlinks to other pages for big enough topics, brief summaries + pictures will be kept tho. Categories by topic (political, historical/mythological/anthropological, buddhist/hindu, chinese, aristotle/plate)</h2>
+
+	<h1>Major Philosophical Schools & Authors</h1>
+	<h2>Hinduism/Brahmanism - The shared basic ideas of the philosophical traditions of the Indian subcontinent </h2>
+	<h2>Shankara</h2>
 	<h2>Buddhism</h2>
+	<h2>Nagarjuna</h2>
 	<h2>Taoism</h2>
+
+	<h1>Lifestyle/Daily Living</h1>
+	<h2>Diet - Eating Well</h2>
+	<h2>Exercise & Stretching- Moving Well</h2>
+
+	<h1>Political</h1>
+	<h2>Psychedelics - Decriminalize psilocybin mushrooms</h2>
+	<h2>Use an AdBlocker - ublock Origin my beloved</h2>
+	<h2>love open-source anything <3</h2>
+	<h2>Anti-Plastics & Oil is mostly bad</h2>
+	<h2>Plants and green are good</h2>
+
+	<h1>Historical/Mythological/Anthropological</h1>
+	<h2>Traditional Chinese Medecine</h2>
+	<h2>Mythology and Shin Megami Tensei</h2>
+`	<h2>Esotericism - Hermeticism</h2>
+
+	<h1>General Ideas</h1>
 	<h2>Classical/Pagan beliefs (magic, astrology/astronomy, history[merlin...]) being absorbed and transformed by Christianity</h2>
 	<p>Partially inspired by Berserk. "At all levels, astral and celestial theology was absorbed by Christianity and popular magic did not disappear; it was merely Christianized as saints replaced nature spirits" A History of Western Astrology Volume II p.2</p>
 	<p>What use is there in studying the classical arts: astrology, other examples idrk rn</p>
 	<h2>^The transition from Polytheism -> Monotheism -> non-theism -> ?????????</h2>
 	<p>The evolution of thinking, what questions needed to be solved  per a certain era. Logically tracing lines of thinking with hindsight</p>
-
-	<h2>Use an AdBlocker - ublock Origin my beloved</h2>
-	<h2>love open source <3</h2>
-	<h2>Anti-Plastics & Oil is mostly bad</h2>
-	<h2>Plants and green are good</h2>
-	<h2>Mythology and Shin Megami Tensei</h2>
-	<h2>Traditional Chinese Medecine</h2>
-	<h2>Psychedelics - Decriminalize psilocybin mushrooms</h2>
-	<h2>Eating Well</h2>
-	<h2>Moving Well</h2>
 
 </div>
 
