--- a/aesthetic_ideas.html
+++ b/aesthetic_ideas.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+	
 <div>
 <h1>Wizard's Aesthetic</h1>
 	<b class="smallMargins">aesthetic - status:</b>
@@ -22,7 +24,10 @@
 	</table>
 </div>
 
-
+<div class="container">
+	<div1>
+	</div1>
+</div>
 
 </body>
 </html> 
