--- a/blog.html
+++ b/blog.html
@@ -23,11 +23,18 @@
 	</table>
 </div>
 
-<div>
+<div class="container">
+<div1>
 <h2>Wizard's Chronicle</h2>
+
+<b>2024-05-29</b>
+>Abzu background
+
 
 <b>2024-05-28</b> <br>
 >Hermes Trismegistus and the Hermetica <br>
+>Added sidebar <br>
+>Filled out philosophy topics & astronomy page <br>
 
 <h2>Domains to study towards polymath understanding of things</h2>
 Astronomy - Understanding the simple, classically understood information. Goals: Major constellations, direction/navigation & season
@@ -37,7 +44,7 @@ Hermeticism & Alchemy <br>
 
 History: Babylon - Why is it so important, what are its main exports (Gilgamesh, maths & sciences)
 
-</div>
+</div1>
 
 </body>
 </html> 
