--- a/esotericism.html
+++ b/esotericism.html
@@ -23,9 +23,11 @@
 	</table>
 </div>
 
-<div>
+<div class="container">
+<div1>
 	<h2>topics</h2>
 	<a href="https://www.justinsledge.com/esoterica-library">Reading List - Western Esotericism</a>
+</div1>
 
 </body>
 </html> 
