--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class="container">
-		<div1 class="mainPage">
+		<div1 >
 			<h1>Wizard Home - Welcome to ponderlands</h1>
 			<b class="smallMargins">home - status:</b>
 			<p class="smallMargins">mmmmmm</p>
@@ -43,7 +43,7 @@
 
 
 		</div1>
-		<div2 class="sidebarRight" style="text-align:center">
+		<div2 style="text-align:center">
 			<br>
 			<h2>Sidebar - Links</h2>
 			<b><a href="astronomy.html">\Astronomy/</a></b>  <br>
