--- a/media.html
+++ b/media.html
@@ -21,5 +21,44 @@
 		</tr>
 	</table>
 
+<div class="container">
+<div1>
+
+
+<h2>Review Board:</h2>
+
+<table>
+	<tr><td>
+		<img src="Assets/Reviews/fmb-cover.jpg" width=250px> <br>
+		>image, name, date, author/studio/director <br>
+		>score, review/notes, favorite character, progress
+
+	</td></tr>
+	<tr><td>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+	</td></tr>
+	<tr><td>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+	</td></tr>
+
+</table>
+
+
+</div1>
+
+<div2 style="text-align:center">
+<h2>Plan for the site</h2> 
+>divide by medium, list art and media that is important to me <br>
+>Question: Catalogue or showcase/podium? <br>
+<b>Favorites:</b>
+>music(topster)
+>anime:
+>manga:
+>video games: <br>
+
+<b>Review board - Standard review creations, regardless of (or standardised by) medium</b>
+</div2>
+
+
 </body>
 </html> 
