--- a/mythology.html
+++ b/mythology.html
@@ -23,7 +23,9 @@
 	</table>
 </div>
 
-<div>
+<div class="container">
+	
+<div1>
 	<h2>Myths and stories I'd like to explore, or that I find interesting</h2>
 	<h3>The Mahabharata</h3>
 	<h3>The Ramayana</h3>
@@ -32,6 +34,9 @@
 	<h3>The Aeneid by Virgil</h3>
 	<h3>The Poetic & The Prose Edda</h3>
 	<h3>Beowulf</h3>
+</div1>
+
+</div>
 
 </body>
 </html>
