--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -23,7 +23,8 @@
 	</table>
 </div>
 
-<div>
+<div class="container">
+<div1>
 	<h2>planning to add hyperlinks to other pages for big enough topics, brief summaries + pictures will be kept tho. Categories by topic (political, historical/mythological/anthropological, buddhist/hindu, chinese, aristotle/plate)</h2>
 
 	<h1>Major Philosophical Schools & Authors</h1>
@@ -56,7 +57,7 @@
 	<h2>^The transition from Polytheism -> Monotheism -> non-theism -> ?????????</h2>
 	<p>The evolution of thinking, what questions needed to be solved  per a certain era. Logically tracing lines of thinking with hindsight</p>
 
-</div>
+</div1>
 
 
 </body>
