--- a/astronomy.html
+++ b/astronomy.html
@@ -23,7 +23,8 @@
 	</table>
 </div>
 
-<div>
+<div class="container">
+<div1>
 <h2>2024-05-28 Notes</h2>
 <a href="https://skymaps.com">Skymaps</a>
 <br> <br>
@@ -88,7 +89,11 @@ Hand trick = Approximately <br>
 <h2>Navigating using stars</h2>
 1. Following the north star for north
 2. Follow Orion's belt trick for south
-</div>
+</div1>
+
+<div2>
+	
+</div2>
 
 </body>
 </html> 
