Dark wallpaper + review board format

--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 			<p class="smallMargins">mmmmmm</p>
 			<table>
 				<tr>
-					<th><a href="index.html">home</a></th>
-					<th><a href="media.html">media</a></th>
-					<th><a href="creations.html">creations</a></th>
-					<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
-					<th><a href="aesthetic_ideas.html">Aesthetic Ideas</a></th>
-					<th><a href="blog.html">blog</a></th>
-					<th><a href="wizard.html">wizardry</a></th>
+					<th><a href="index.html">Home</a></th>
+					<th><a href="media.html">Media</a></th>
+					<th><a href="blog.html">Blog</a></th>
 				</tr>
 			</table>
 
@@ -32,9 +28,10 @@
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
 			<br>
 			Gifs found at <a href="https://gifcities.org/">gifcities</a> <br>
-			site background is a screenshot from <a href="https://abzugame.com/">Abzu</a>
+			site background is a screenshot from <a href="https://abzugame.com/">Abzu</a> <br>
+			website partially inspired by astrozist's <a href="https://insect.christmas/">insect.christmas</a>
 
-			<br><br>
+			<br>
 			
 			<br>
 			<img src="Gifs/oceanbkgwithwhitemoon.gif">
@@ -46,11 +43,17 @@
 		<div2 style="text-align:center">
 			<br>
 			<h2>Sidebar - Links</h2>
+			<b><a href="wizard.html">wizardry</a></b> <br>
+			
+			<h3>Ideas</h3>
+			<b><a href="aesthetic_ideas.html">Aesthetic Ideas</a></b> <br>
+			<b><a href="philosophical_ideas.html">Philosophical Ideas</a></b> <br>
+
+			<h3>Learning Topics</h3>
 			<b><a href="astronomy.html">\Astronomy/</a></b>  <br>
 			<b><a href="mythology.html">\Mythology/</a></b>  <br>
 			<b><a href="esotericism.html">\Esotericism/</a></b>  <br>
-
-			<img src="Gifs/shrooms.gif" style="width:300px;"><br>
+			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
 	</div>
