--- a/media.html
+++ b/media.html
@@ -9,15 +9,11 @@
 <h1>Wizard's Media Archive</h1>
 	<b class="smallMargins">media - status:</b>
 	<p class="smallMargins">mmmmmm</p>
-	<table>
+	<table class="border">
 		<tr>
-			<th><a href="index.html">home</a></th>
-			<th><a href="media.html">media</a></th>
-			<th><a href="creations.html">creations</a></th>
-			<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
-			<th><a href="aesthetic_ideas.html">Aesthetic Ideas</a></th>
-			<th><a href="blog.html">blog</a></th>
-			<th><a href="wizard.html">wizardry</a></th>
+			<th><a href="index.html">Home</a></th>
+			<th><a href="media.html">Media</a></th>
+			<th><a href="blog.html">Blog</a></th>
 		</tr>
 	</table>
 
@@ -29,16 +25,12 @@
 
 <table>
 	<tr><td>
-		<img src="Assets/Reviews/fmb-cover.jpg" width=250px> <br>
-		>image, name, date, author/studio/director <br>
-		>score, review/notes, favorite character, progress
-
-	</td></tr>
-	<tr><td>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-	</td></tr>
-	<tr><td>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+		<table style="border:0px">
+			<th><img src="Assets/Reviews/fmb-cover.jpg" height=250px></th>
+			<th>Name:Flying Microtonal Banana; Date:Feb 24, 2017; Creator:King Gizzard & the Lizard Wizard  <br>
+			>score: 10/10; Favorite Song: Nuclear Fusion <br> 
+			>thoughts: </th> 
+		</table>
 	</td></tr>
 
 </table>
@@ -56,7 +48,7 @@
 >manga:
 >video games: <br>
 
-<b>Review board - Standard review creations, regardless of (or standardised by) medium</b>
+<b>Review board - Standard review creations, regardless of (or standardised by) medium, favorite character/song</b>
 </div2>
 
 
