--- a/philosophical_ideas.html
+++ b/philosophical_ideas.html
@@ -12,13 +12,9 @@
 	<p class="smallMargins">glad this is full</p>
 	<table>
 		<tr>
-			<th><a href="index.html">home</a></th>
-			<th><a href="media.html">media</a></th>
-			<th><a href="creations.html">creations</a></th>
-			<th><a href="philosophical_ideas.html">Philosophical Ideas</a></th>
-			<th><a href="aesthetic_ideas.html">Aesthetic Ideas</a></th>
-			<th><a href="blog.html">blog</a></th>
-			<th><a href="wizard.html">wizardry</a></th>
+			<th><a href="index.html">Home</a></th>
+			<th><a href="media.html">Media</a></th>
+			<th><a href="blog.html">Blog</a></th>
 		</tr>
 	</table>
 </div>
