--- a/astronomy.html
+++ b/astronomy.html
@@ -88,7 +88,29 @@ Hand trick = Approximately <br>
 </div1>
 
 <div2>
-	
+
+<h2>Astrology - A History of Western Astrology Volume 1</h2>
+<b>Intro/Definitions</b> <br>
+>two types of astrology: specific intending to divine specific events, and broad or nonspecific <br>
+<br>
+<b>Chapter 1</b> <br>
+>Astrology is marked by the search for meaning in the sky, amongst the stars and planets and in the sun and moon." <br>
+>The day and night cycle, along with the movements of the Sun and the Moon were important to early human life <br>
+>Makes sense that they would be absorbed into story-telling to make sense of the world <br>
+>Think more deeply about the effect that the removal of true night has had on how we liver <br>
+>Very interesting that the cycle of the moon is almost regular at about every 28 days <br>
+>Keeping track of the lunar cycle probably led to more *awareness* of time passing, could be a fun experiment nowadays <br>
+>SMT mechanic of moon cycling is kinda cool with this in mind <br>
+>"Or rather, we should say, human life was tied to the natural environment which
+itself included the stars as much as plants, stones and animals. There was, it seems
+a high regard for the powers of the sky, a celestial theology' in which human life
+was tied to the heavens." <br>
+>Transition from lunar tracking to stellar, where stars were next to be analysed (example: herald of day/night <br>
+>The Pleiades, the bright star cluster visible to the naked eye, has myths all across the globe) <br>
+<br>
+<b>Chapter 2</b> <br>
+>Two forms of cosmology, shamanistic and geomantic
+
 </div2>
 
 </body>
