--- a/esotericism.html
+++ b/esotericism.html
@@ -23,6 +23,10 @@
 <div1>
 	<h2>topics</h2>
 	<a href="https://www.justinsledge.com/esoterica-library">Reading List - Western Esotericism</a>
+	>alchemy - not that interested in the end, basic chemistry that has simply been outclassed
+	>astrology
+	>rune magic
+	>kabbala
 </div1>
 
 </body>
