--- a/blog.html
+++ b/blog.html
@@ -23,10 +23,14 @@
 <div1>
 <h2>Wizard's Chronicle</h2>
 
-<b>2024-05-29</b>
->Abzu background
+<b>2024-05-30</b> <br>
+>Darker forest background + seashell text is a nice combo, visibility is good <br>
+>look into the 'Great Books of the Western World' author/works list and divide them into a reading list <br>
 
-
+<br>
+<b>2024-05-29</b> <br>
+>Abzu background <br>
+<br>
 <b>2024-05-28</b> <br>
 >Hermes Trismegistus and the Hermetica <br>
 >Added sidebar <br>
