--- a/media.html
+++ b/media.html
@@ -22,14 +22,15 @@
 
 
 <h2>Review Board:</h2>
-
+<b>Review board - Standard review creations, regardless of (or standardised by) medium, favorite character/song</b>
 <table>
 	<tr><td>
 		<table style="border:0px">
 			<th><img src="Assets/Reviews/fmb-cover.jpg" height=250px></th>
+			<th>
 			<th>Name:Flying Microtonal Banana; Date:Feb 24, 2017; Creator:King Gizzard & the Lizard Wizard  <br>
-			>score: 10/10; Favorite Song: Nuclear Fusion <br> 
-			>thoughts: </th> 
+			score: 10/10; Favorite Song: Nuclear Fusion <br> 
+			>thoughts: gas</th> 
 		</table>
 	</td></tr>
 
@@ -39,16 +40,13 @@
 </div1>
 
 <div2 style="text-align:center">
-<h2>Plan for the site</h2> 
->divide by medium, list art and media that is important to me <br>
->Question: Catalogue or showcase/podium? <br>
-<b>Favorites:</b>
->music(topster)
->anime:
->manga:
->video games: <br>
+<h2>\Favorites/</h2> <br>
+<a href="Assets/Music_of_all_time.png">>music(topster)</a> <br>
+<a href="Assets/Games_of_all_time.png">>video games</a> <br>
+<a href="Assets/Anime_of_all_time.png">>anime</a> <br>
+>manga: <br>
 
-<b>Review board - Standard review creations, regardless of (or standardised by) medium, favorite character/song</b>
+
 </div2>
 
 
