--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Personal Website Page2</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -13,9 +13,9 @@
 	<p class="smallMargins">mmmmmm</p>
 	<table>
 		<tr>
-			<th><a href="index.html">Home</a></th>
-			<th><a href="media.html">Media</a></th>
-			<th><a href="blog.html">Blog</a></th>
+			<th><a href="../index.html">Home</a></th>
+			<th><a href="../html/media.html">Media</a></th>
+			<th><a href="../html/blog.html">Blog</a></th>
 		</tr>
 	</table>
 </div>
