--- a/html/blog.html
+++ b/html/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Personal Website Page2</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -12,31 +12,43 @@
 	<p class="smallMargins">mmmmmm</p>
 	<table>
 		<tr>
-			<th><a href="index.html">Home</a></th>
+			<th><a href="../index.html">Home</a></th>
 			<th><a href="media.html">Media</a></th>
 			<th><a href="blog.html">Blog</a></th>
 		</tr>
 	</table>
 </div>
 
-<div class="container">
-<div1>
-<h2>Wizard's Chronicle</h2>
+<div class="centerpiece">
+<div1 style="text-align:center">
 
+<b>2024-05-31</b> <br>
+>WorkList: <br>
+>homepage: Center and add side borders <br>
+>media: decide on structure for review block, do I keep sidebar? <br>
+<s>>blog: center, add side padding </s><br>
+>Philosophical Ideas: Turn into directory towards subpages of research topics <br>
+
+<br>
 <b>2024-05-30</b> <br>
 >Darker forest background + seashell text is a nice combo, visibility is good <br>
 >look into the 'Great Books of the Western World' author/works list and divide them into a reading list <br>
+>incorporate .xlsx spreadsheets for books/games inventory <br>
+>list favorite characters <br>
 
 <br>
 <b>2024-05-29</b> <br>
 >Abzu background <br>
+
 <br>
 <b>2024-05-28</b> <br>
 >Hermes Trismegistus and the Hermetica <br>
 >Added sidebar <br>
 >Filled out philosophy topics & astronomy page <br>
 
-<h2>Domains to study towards polymath understanding of things</h2>
+
+<br><br>
+<h2 style="text-align:center">Domains to study towards polymath understanding of things</h2>
 Astronomy - Understanding the simple, classically understood information. Goals: Major constellations, direction/navigation & season
 tracing the history of astronomy <br>
 
