--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Personal Website Page2</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -12,15 +12,15 @@
 	<p class="smallMargins">glad this is full</p>
 	<table>
 		<tr>
-			<th><a href="index.html">Home</a></th>
-			<th><a href="media.html">Media</a></th>
-			<th><a href="blog.html">Blog</a></th>
+			<th><a href="../index.html">Home</a></th>
+			<th><a href="../html/media.html">Media</a></th>
+			<th><a href="../html/blog.html">Blog</a></th>
 		</tr>
 	</table>
 </div>
 
-<div class="container">
-<div1>
+<div class="centerpiece">
+<div1 style="text-align:center">
 	<h1>Major Philosophical Schools & Authors</h1> <br>
 	<h1>Eastern Philosophy</h1>
 	<h2>Hinduism/Brahmanism - The shared basic ideas of the philosophical traditions of the Indian subcontinent </h2>
@@ -28,17 +28,19 @@
 	<h2>Buddhism</h2>
 	<h2>Nagarjuna</h2>
 	<h2>Taoism</h2>
+	<br>
 
 	<h1>Western Philosophy</h1>
 	<h2>Aristotle</h2>
 	<h2>Arabic Philosophy - Trnalsation of classical texts</h2>
 	<h2>Descartes and all the theists ig</h2>
-
 	<br>
+
 	<h1>Lifestyle/Daily Living</h1>
 	<h2>Diet - Eating Well</h2>
 	<h2>Exercise & Stretching- Moving Well</h2>
 	<br>
+
 	<h1>Political</h1>
 	<h2>Psychedelics - Decriminalize psilocybin mushrooms</h2>
 	<h2>Use an AdBlocker - ublock Origin my beloved</h2>
@@ -46,11 +48,13 @@
 	<h2>Anti-Plastics & Oil is mostly bad</h2>
 	<h2>Plants and green are good</h2>
 	<br>
+
 	<h1>Historical/Mythological/Anthropological</h1>
 	<h2>Traditional Chinese Medecine - Ted Kaptchuk - The Web That Has No Weaver</h2>
 	<h2><a href="mythology.html">Mythology</a> and Shin Megami Tensei</h2>
 	<h2>Esotericism - Hermeticism</h2>
 	<br>
+
 	<h1>General Ideas</h1>
 	<h2>Classical/Pagan beliefs (magic, astrology/astronomy, history[merlin...]) being absorbed and transformed by Christianity</h2>
 	<p>Partially inspired by Berserk. "At all levels, astral and celestial theology was absorbed by Christianity and popular magic did not disappear; it was merely Christianized as saints replaced nature spirits" A History of Western Astrology Volume II p.2</p>
@@ -61,11 +65,6 @@
 </div1>
 
 <div2>
-	<b>2024-05-31</b> <br>
-	><b>Syntopicon1</b>: Angel, Animal, Aristocracy, Art, Astronomy, Beauty, Being, Cause, Chance, Change, Citizen, Constitution, Courage, Custom and Convention, Definition, Democracy, Desire, Dialectic, Duty, Education, Element, Emotion, Eternity, Evolution, Experience, Family, Fate, Form, God, Good and Evil, Government, Habit, Happiness, History, Honor, Hypothesis, Idea, Immortality, Induction, Infinity, Judgment, Justice, Knowledge, Labor, Language, Law, Liberty, Life and Death, Logic, and Love
-	<br><br>
-	<b>Syntopicon II</b>: Man, Mathematics, Matter, Mechanics, Medicine, Memory and Imagination, Metaphysics, Mind, Monarchy, Nature, Necessity and Contingency, Oligarchy, One and Many, Opinion, Opposition, Philosophy, Physics, Pleasure and Pain, Poetry, Principle, Progress, Prophecy, Prudence, Punishment, Quality, Quantity, Reasoning, Relation, Religion, Revolution, Rhetoric, Same and Other, Science, Sense, Sign and Symbol, Sin, Slavery, Soul, Space, State, Temperance, Theology, Time, Truth, Tyranny, Universal and Particular, Virtue and Vice, War and Peace, Wealth, Will, Wisdom, and World
-	<br>
 </div2>
 </body>
 </html> 
