--- a/html/wizard.html
+++ b/html/wizard.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 body {
-  background-image: url('Assets/Dragonstorm.jpg');
+  background-image: url('../images/Dragonstorm.jpg');
 }
 </style> 
 <head>
@@ -16,9 +16,9 @@ body {
 	<p class="smallMargins">mmmmmm</p>
 	<table>
 		<tr>
-			<th><a href="index.html">Home</a></th>
-			<th><a href="media.html">Media</a></th>
-			<th><a href="blog.html">Blog</a></th>
+			<th><a href="../index.html">Home</a></th>
+			<th><a href="../html/media.html">Media</a></th>
+			<th><a href="../html/blog.html">Blog</a></th>
 		</tr>
 	</table>
 </div>
