--- a/index2.html
+++ b/index2.html
@@ -8,12 +8,12 @@
 <body>
 
 
-	<div class="container">
-		<div1 >
+	<div class="centerpiece">
+		<div1 style="text-align:center">
 			<h1>Wizard Home - Welcome to ponderlands</h1>
 			<b class="smallMargins">home - status:</b>
 			<p class="smallMargins">mmmmmm</p>
-			<table>
+			<table >
 				<tr>
 					<th><a href="index.html">Home</a></th>
 					<th><a href="html/media.html">Media</a></th>
@@ -23,29 +23,25 @@
 			</table>
 
 			<h2>about:</h2>
-			welcome to kodama.top, Christian's home on the internet (not my words)
+			<p>welcome to kodama.top, Christian's home on the internet (not my words)
 			<br>
-			landing page for all my interests/investigations, check them out if you feel like it
-			<br>
-
-			<br>
-			
-			<br>
-			<img src="gifs/oceanbkgwithwhitemoon.gif">
+			landing page for all my interests/investigations, check them out if you feel like it</p>
+			<br><br>			
+			<img src="gifs/oceanbkgwithwhitemoon.gif" class="center">
 			<!-- <img src="Assets/misato.jpeg" style="width:400px;"><br> -->
 
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
 			<br>
-			Gifs found at <a href="https://gifcities.org/">gifcities</a> <br>
+			<p>Gifs found at <a href="https://gifcities.org/">gifcities</a> <br>
 			site background is a screenshot from <a href="https://abzugame.com/">Abzu</a> <br>
 			website partially inspired by astrozist's <a href="https://insect.christmas/">insect.christmas</a>
-			
+			</p>
 
 
 		</div1>
 		<div2 style="text-align:center">
 			<br>
-			<h2>Sidebar - Links</h2>
+			<h2>Links</h2>
 			<b><a href="html/wizard.html">wizardry</a></b> <br>
 			
 			<h3>Ideas</h3>
