Media review format finalized

--- a/html/aesthetic_ideas.html
+++ b/html/aesthetic_ideas.html
@@ -16,6 +16,7 @@
 			<th><a href="../index.html">Home</a></th>
 			<th><a href="../html/media.html">Media</a></th>
 			<th><a href="../html/blog.html">Blog</a></th>
+			<th><a href="../html/philosophical_ideas.html">Philosophy</a></th>
 		</tr>
 	</table>
 </div>
