--- a/html/blog.html
+++ b/html/blog.html
@@ -15,6 +15,7 @@
 			<th><a href="../index.html">Home</a></th>
 			<th><a href="media.html">Media</a></th>
 			<th><a href="blog.html">Blog</a></th>
+			<th><a href="../html/philosophical_ideas.html">Philosophy</a></th>
 		</tr>
 	</table>
 </div>
@@ -25,7 +26,7 @@
 <b>2024-05-31</b> <br>
 >WorkList: <br>
 >homepage: Center and add side borders <br>
->media: decide on structure for review block, do I keep sidebar? <br>
+<s>>media: decide on structure for review block, do I keep sidebar? </s> <br>
 <s>>blog: center, add side padding </s><br>
 >Philosophical Ideas: Turn into directory towards subpages of research topics <br>
 
