--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<b><a href="html/astronomy.html">\Astronomy/</a></b>  <br>
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
 			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br>
+			<b><a href="html/food.html">\Food/</a></b>  <br>
 			<img src="gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
