Renamed Gifs folder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<br>
 			
 			<br>
-			<img src="gifs/oceanbkgwithwhitemoon.gif">
+			<img src="Gifs/oceanbkgwithwhitemoon.gif">
 			<!-- <img src="Assets/misato.jpeg" style="width:400px;"><br> -->
 
 			<!--If video autplay is wanted again command: <video autoplay="" muted="" loop="" src="Richtoffen_Edit.mp4"></video> -->
@@ -57,7 +57,7 @@
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
 			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br>
 			<b><a href="html/food.html">\Food/</a></b>  <br>
-			<img src="gifs/shrooms.gif" style="width:300px;"> <br>
+			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
 	</div>
