--- a/html/media.html
+++ b/html/media.html
@@ -22,6 +22,7 @@
 <div1>
 
 
+
 <h2>Review Board:</h2>
 <b>Review board - Standard review creations, regardless of (or standardised by) medium, favorite character/song</b>
 <table>
@@ -44,6 +45,20 @@
 		</table>
 </table>
 
+<h2>Characters I love: </h2>
+<table>
+	<tr>
+		<th><img src="../Images/Character-Board/riza_hawkeye.jpeg" style="height:225px;"> <br>Riza Hawkeye </th>
+		<th><img src="../Images/Character-Board/misato.jpeg" style="height:225px;"> <br>Misato Katsuragi </th>
+		<th><img src="../Images/Character-Board/nico_robin1.jpg" style="height:225px;"> <br>Nico Robin </th>
+		<th><img src="../Images/Character-Board/aoko.png" style="height:225px;"> <br>Aoko Aozaki </th>
+	</tr>
+	<tr>
+		<th><img src="../Images/Character-Board/faye.jpg" style="height:225px;"> <br>Faye Valentine </th>
+		<th><img src="../Images/Character-Board/themajor.jpg" style="height:225px;"> <br>Motoko Kusanagi </th>
+		<th><img src="../Images/Character-Board/artemis.jpg" style="height:225px;"> <br>Artemis </th>
+	</tr>
+</table>
 
 </div1>
 
@@ -53,11 +68,18 @@
 <b><a href="../images/Music_of_all_time.png">Music</a></b> <br>
 >King Gizzard and The Lizard Wizard <br>
 >Tupperware Remix Party <br>
+>The Midnight <br>
+>Al Stewart - Year of the Cat <br>
 
 <br>
 <b>Video Games - <a href="../images/Games_of_all_time.png">Chart</a></b> <br>
 >Abzu <br>
 >Ori and the Will of the Wisps <br>
+>Va-11 Hall-A <br>
+>Bomb Rush Cyberfunk <br>
+>Cave Story <br>
+>Risk of Rain 2 <br>
+>Nier Automata <br>
 
 <br>
 <b>Anime - <a href="../images/Anime_of_all_time.png">Chart</a></b> <br>
@@ -66,11 +88,19 @@
 >Samurai Champloo <br>
 >Gurren Lagann <br>
 >Azumanga Daioh <br>
+>Lupin III <br>
+>FLCL <br>
+>Tatami Galaxy <br>
 
 <br>
 <b>Manga</b> <br>
->azumanga daioh <br>
+>Yotsuba& <br>
 >One Piece <br>
+>Blame! <br>
+>Berserk <br>
+>Girls Last Tour <br>
+>One-Punch Man <br>
+>DanDaDan <br>
 
 
 
