--- a/html/philosophical_ideas.html
+++ b/html/philosophical_ideas.html
@@ -21,9 +21,10 @@
 </div>
 
 <div class="centerpiece">
-<div1 style="text-align:center">
+<div1 >
+	<p>summaries of important topics, with links to further pages in headers</p>
 	<h1>Major Philosophical Schools & Authors</h1> <br>
-	<h1>Eastern Philosophy</h1>
+	<h1><a href="../html/eastern_philosophy.html">Eastern Philosophy</a></h1>
 	<h2>Hinduism/Brahmanism - The shared basic ideas of the philosophical traditions of the Indian subcontinent </h2>
 	<h2>Shankara</h2>
 	<h2>Buddhism</h2>
@@ -31,15 +32,16 @@
 	<h2>Taoism</h2>
 	<br>
 
-	<h1>Western Philosophy</h1>
+	
+	<h1><a href="../html/western_philosophy.html">Western Philosophy</a></h1>
 	<h2>Aristotle</h2>
 	<h2>Arabic Philosophy - Trnalsation of classical texts</h2>
 	<h2>Descartes and all the theists ig</h2>
 	<br>
 
 	<h1>Lifestyle/Daily Living</h1>
-	<h2>Diet - Eating Well</h2>
-	<h2>Exercise & Stretching- Moving Well</h2>
+	<h2><a href="../html/diet.html">Diet</a> - Eating Well</h2>
+	<h2><a href="../html/exercise.html">Exercise</a> & Stretching- Moving Well</h2>
 	<br>
 
 	<h1>Political</h1>
