--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			<b><a href="html/mythology.html">\Mythology/</a></b>  <br>
 			<b><a href="html/esotericism.html">\Esotericism/</a></b>  <br>
 			<b><a href="html/food.html">\Food/</a></b>  <br>
+			<b><a href="html/exercise.html">\Exercise/</a></b>  <br>
 			<img src="Gifs/shrooms.gif" style="width:300px;"> <br>
 			
 		</div2>
